# DS5_Bridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: build.yml  companion.yml  release.yml
companion/: UI_STYLE_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
companion/scripts/: analyze-host-audio-capture.mjs  check-installer-upgrade-config.mjs  electron-builder-after-pack.cjs  layout-check.mjs  package-win.mjs  visual-smoke.mjs
companion/src/: preload.ts
docs/: development.md  diagnostics.md  persona-emulation-profile-research.md  windows-device-cleanup.md
src/: audio.cpp  audio.h  bt.cpp  bt.h  btstack_config.h  button_functions.cpp  companion.cpp  companion.h  controller_output_policy.cpp  controller_output_policy.h  controller_output_rumble_state.cpp  controller_output_rumble_state.h  controller_output_state.cpp  controller_output_state.h  core1_flash_safety.cpp  core1_flash_safety.h  dualsense_output.h  haptics_test_signal.cpp  haptics_test_signal.h  host_audio_runtime.h  host_bridge.cpp  host_input.h  host_pcm_iso.cpp  host_pcm_iso.h  main.cpp  output_scheduler.cpp  output_scheduler.h  player_led_mode.h  tusb_config.h  usb.cpp  usb.h  usb_descriptors.c  utils.h
src/persona/: ds4_persona.cpp  ds4_persona.h  host_persona.cpp  host_persona.h  (+1 more)
tools/: audio-haptics-battery.mjs  build-pico-universal-flash-nuke.ps1  create-release-candidate.ps1
tools/pico-universal-flash-nuke/: CMakeLists.txt  LICENSE  README.md  flash.c  nuke.c
(+45 files in other folders)
